Added header html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   <body>
   <!----------HEADER SECTION--------------->
       <header>
+        <div class="full-width">
+            <div class="half-width">
+                <h1>Lesley <span>Wesley</span></h1>
+            </div>
+            <div class="half-width">
+                <nav>
+                <ul>
+                    <li><a href="#work">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+        </div>
 
       </header>
 
