Added hero section html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
   <!---------HERO SECTION ----------------->
 
         <section id="hero">
+            <div class="full-width">
+              
+                <div class="half-width">
+                    <h2>My name is <span>Lesley Wesley</span></h2>
+                </div>
+                <div class="half-width">
+                    <h2>And I'm a <span>Front-End Developer</span></h2>
+                </div>
+
+            </div>
+
         </section>
 
 <!------------WORK SECTION ---------------->
