Added about section html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <section id="hero">
             <div class="full-width">
-              
+
                 <div class="half-width">
                     <h2>My name is <span>Lesley Wesley</span></h2>
                 </div>
@@ -53,6 +53,25 @@
 <!--------------ABOUT SECTION --------------->
 
         <section id="about">
+
+          <div class="full-width">
+              <h3>about me</h3>
+
+              <div class="half-width">
+                  <p>I'm a huge comic book nerd, and was originally inspired to learn to code from reading Batgirl comics.  I quickly fell in love with the process of building websites from the ground up, and used my time in quarantine to level up my coding skills.  I use HTML5, CSS, and JavaScript, and I'm currently learning how to build websites with Wordpress.</p>
+
+                  <br>
+
+                  <p>When I'm not working on new web projects, I can be found playing video games, studying Korean, and relaxing with my favorite music.</p>
+              </div>
+
+              <div class="half-width">
+                  <figure>
+                      <img src="img/headshot2.png" alt="Profile Pic" />
+                  </figure>
+              </div>
+
+          </div>
         </section>
       </main>
 
