Added footer and work section html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,231 @@
 <!------------WORK SECTION ---------------->
 
         <section id="work">
+            <div class="full-width">
+                <h3>my projects</h3>
+                <p class="section-heading">Want a closer look?  Click on any of the project images to explore each site!</p>
+
+                <div class="project" id="unplugged-project">
+                        <div class="half-width">
+                          <figure>
+                            <a href=" https://lesleywesley.github.io/unplugged-retreat-project/" target="_blank">
+                            <img class="unplugged" src="img/unplugged-screenshot.png" alt="Unplugged Project" />
+                            </a>
+                          </figure>
+                        </div>
+                        <div class="half-width, description">
+                          <h4>Unplugged Project</h4>
+                          <h5>Created using HTML5 & CSS</h5>
+                          <p>A fully-responsive, multi-page site for a company specializing in teambuilding work retreats. Features a newsletter sign-up section and customer testimonials, as well as extra pages for Frequently Asked Questions and contact information.</p>
+                        </div>
+                    </div>
+
+    <!-----DIVIDER DIVS --------->
+                    <div class="divider-parent">
+                        <div class="divider-row-right">
+                            <div class="one-one">
+                            </div>
+                            <div class="one-two">
+                            </div>
+                            <div class="one-three">
+                            </div>
+                            <div class="one-four">
+                            </div>
+                        </div>
+
+                        <div class="divider-row-right">
+                            <div class="two-one">
+                            </div>
+                            <div class="two-two">
+                            </div>
+                            <div class="two-three">
+                            </div>
+                        </div>
+
+                        <div class="divider-row-right">
+                            <div class="three-one">
+                            </div>
+                            <div class="three-two">
+                            </div>
+                            <div class="three-three">
+                            </div>
+                            <div class="three-four">
+                            </div>
+                        </div>
+                    </div>
+
+    <!------End of Divider Divs ---------->
+
+                    <div class="project">
+                        <div class="half-width">
+                          <figure>
+                            <a href=" https://lesleywesley.github.io/responsive-one-page-site/" target="_blank">
+                            <img class="jubilee-austen" src="img/jubilee-austen-screenshot-2.png" alt="Jubilee Austen Project" />
+                            </a>
+                          </figure>
+                        </div>
+                        <div class="half-width, description">
+                            <h4>Jubilee Austen Project</h4>
+                            <h5>Created using HTML5 & CSS.</h5>
+                            <p>A fully-responsive, one-page portfolio website.  Features Hero, Work, Contact, and About sections.  Elegant in its simplicity.</p>
+                        </div>
+                    </div>
+
+  <!-----DIVIDER DIVS --------->
+                    <div class="divider-parent">
+                        <div class="divider-row-left">
+                            <div class="one-one">
+                            </div>
+                            <div class="one-two">
+                            </div>
+                            <div class="one-three">
+                            </div>
+                            <div class="one-four">
+                            </div>
+                    </div>
+
+                    <div class="divider-row-left">
+                        <div class="two-one">
+                        </div>
+                        <div class="two-two">
+                        </div>
+                        <div class="two-three">
+                        </div>
+                    </div>
+
+                    <div class="divider-row-left">
+                        <div class="three-one">
+                        </div>
+                        <div class="three-two">
+                        </div>
+                        <div class="three-three">
+                        </div>
+                        <div class="three-four">
+                        </div>
+                        </div>
+                    </div>
+
+  <!------End of Divider Divs ---------->
+
+                    <div class="project" id="lolcat-clock">
+                        <div class="half-width">
+                          <figure>
+                            <a href=" https://lesleywesley.github.io/lolcat-clock/" target="_blank">
+                            <img class="lolcat" src="img/lolcat-clock-screenshot.png" alt="Lolcat Clock" />
+                            </a>
+                          </figure>
+                        </div>
+                        <div class="half-width, description">
+                            <h4>LolCat Clock Project</h4>
+                            <h5>Created using HTML5, CSS, & JavaScript</h5>
+                            <p>A project combining my HTML, CSS and Javascript skills.  Features a working clock, and adorable pictures of kittens with different captions depending on what time it is.</p>
+                        </div>
+                    </div>
+
+<!-----DIVIDER DIVS --------->
+                    <div class="divider-parent">
+                        <div class="divider-row-right">
+                            <div class="one-one">
+                            </div>
+                            <div class="one-two">
+                            </div>
+                            <div class="one-three">
+                            </div>
+                            <div class="one-four">
+                            </div>
+                        </div>
+
+                        <div class="divider-row-right">
+                            <div class="two-one">
+                            </div>
+                            <div class="two-two">
+                            </div>
+                            <div class="two-three">
+                            </div>
+                        </div>
+
+                        <div class="divider-row-right">
+                            <div class="three-one">
+                            </div>
+                            <div class="three-two">
+                            </div>
+                            <div class="three-three">
+                            </div>
+                            <div class="three-four">
+                            </div>
+                        </div>
+                  </div>
+
+    <!------End of Divider Divs ---------->
+
+                    <div class="project" id="magic-8">
+                        <div class="half-width">
+                            <figure>
+                                <a href="https://lesleywesley.github.io/magic-8-ball/" target="_blank">
+                                  <img class="magic-ball" src="img/magic-ball.png" alt="Magic 8 Ball" />
+                                </a>
+                            </figure>
+                        </div>
+                        <div class="half-width, description">
+                            <h4>Magic 8 Ball Project</h4>
+                            <h5>Created using HTML5, CSS, & JavaScript</h5>
+                            <p>Another project featuring my HTML, CSS, and JavaScript skills.  This one boasts multiple animated features, including a shaking animation and answers that fade into view. Go ahead - Ask it a question, and see what it says!</p>
+                        </div>
+                    </div>
+
+    <!-----DIVIDER DIVS --------->
+                    <div class="divider-parent">
+                        <div class="divider-row-left">
+                            <div class="one-one">
+                            </div>
+                            <div class="one-two">
+                            </div>
+                            <div class="one-three">
+                            </div>
+                            <div class="one-four">
+                            </div>
+                        </div>
+
+                        <div class="divider-row-left">
+                            <div class="two-one">
+                            </div>
+                            <div class="two-two">
+                            </div>
+                            <div class="two-three">
+                            </div>
+                        </div>
+
+                        <div class="divider-row-left">
+                            <div class="three-one">
+                            </div>
+                            <div class="three-two">
+                            </div>
+                            <div class="three-three">
+                            </div>
+                            <div class="three-four">
+                            </div>
+                        </div>
+                    </div>
+
+  <!------End of Divider Divs ---------->
+
+                    <div class="project">
+                      <div class="half-width">
+                          <figure>
+                              <a href="http://lesleywesley.co/" target="_blank">
+                                  <img class="blog" src="img/lesley-blog.png" alt="Blog Homepage" />
+                              </a>
+                          </figure>
+                      </div>
+                      <div class="half-width, description">
+                          <h4>Wordpress Blog</h4>
+                          <h5>Created using HTML5, CSS, & PHP</h5>
+                          <p>A multi-page Wordpress site featuring a personalized homepage and blog page, as well as a variety of plug-ins and widgets.  This is mostly just a show piece, but who knows - maybe I'll write some blog posts if the mood strikes me...</p>
+                      <div>
+                    </div>
+
+            </div>
+
         </section>
 
 <!--------------ABOUT SECTION --------------->
@@ -80,4 +305,32 @@
   <!----------FOOTER SECTION --------------->
 
   <footer id="contact">
-    </footer>
+    <div class="full-width">
+              <h3>get in touch</h3>
+              <p>I can't wait to work with you!</p>
+
+              <div class="third-width" id="email-me">
+                  <h4>hire me</h4>
+                    <a href="mailto:lrwesley92@gmail.com">
+                    LRWesley92@gmail.com
+                    </a>
+              </div>
+
+              <div class="third-width" id="follow-me">
+                  <h4>follow me</h4>
+                  <a href="https://github.com/LesleyWesley" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+
+                  <a href="https://www.instagram.com/lesleyrwesley/?hl=en" target="_blank">
+                      <i class="fab fa-instagram"></i>
+                  </a>
+
+                  <a href="https://www.linkedin.com/in/lesley-wesley-9517911b2/" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                  </a>
+              </div>
+              <p id="copyright">Copyright 2020 | Lesley Wesley</p>
+          </div>
+
+  </footer>
