Added mobile stylings

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
       <title>Lesley Wesley | Portfolio</title>
 
+
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/main2.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
   </head>
 
@@ -34,12 +44,16 @@
         <section id="hero">
             <div class="full-width">
 
-                <div class="half-width">
-                    <h2>My name is <span>Lesley Wesley</span></h2>
+
+
+                <div class="half-width, name">
+                    <h2>My name is<br><span>Lesley Wesley</span></h2>
                 </div>
-                <div class="half-width">
-                    <h2>And I'm a <span>Front-End Developer</span></h2>
+
+                <div class="half-width, profession">
+                    <h2>And I'm a<br><span>Front-End <strong>Developer</strong></span></h2>
                 </div>
+
 
             </div>
 
@@ -104,17 +118,17 @@
     <!------End of Divider Divs ---------->
 
                     <div class="project">
-                        <div class="half-width">
+                        <div class="half-width, description">
+                            <h4>Jubilee Austen Project</h4>
+                            <h5>Created using HTML5 & CSS.</h5>
+                            <p>A fully-responsive, one-page portfolio website.  Features Hero, Work, Contact, and About sections.  Elegant in its simplicity.</p>
+                          </div>
+                        <div class="half-width, reverse">
                           <figure>
                             <a href=" https://lesleywesley.github.io/responsive-one-page-site/" target="_blank">
                             <img class="jubilee-austen" src="img/jubilee-austen-screenshot-2.png" alt="Jubilee Austen Project" />
                             </a>
                           </figure>
-                        </div>
-                        <div class="half-width, description">
-                            <h4>Jubilee Austen Project</h4>
-                            <h5>Created using HTML5 & CSS.</h5>
-                            <p>A fully-responsive, one-page portfolio website.  Features Hero, Work, Contact, and About sections.  Elegant in its simplicity.</p>
                         </div>
                     </div>
 
@@ -206,18 +220,19 @@
     <!------End of Divider Divs ---------->
 
                     <div class="project" id="magic-8">
-                        <div class="half-width">
+                        <div class="half-width, description">
+                            <h4>Magic 8 Ball Project</h4>
+                            <h5>Created using HTML5, CSS, & JavaScript</h5>
+                            <p>Another project featuring my HTML, CSS, and JavaScript skills.  This one boasts multiple animated features, including a shaking animation and answers that fade into view. Go ahead - Ask it a question, and see what it says!</p>
+                        </div>
+                        <div class="half-width, reverse">
                             <figure>
                                 <a href="https://lesleywesley.github.io/magic-8-ball/" target="_blank">
                                   <img class="magic-ball" src="img/magic-ball.png" alt="Magic 8 Ball" />
                                 </a>
                             </figure>
                         </div>
-                        <div class="half-width, description">
-                            <h4>Magic 8 Ball Project</h4>
-                            <h5>Created using HTML5, CSS, & JavaScript</h5>
-                            <p>Another project featuring my HTML, CSS, and JavaScript skills.  This one boasts multiple animated features, including a shaking animation and answers that fade into view. Go ahead - Ask it a question, and see what it says!</p>
-                        </div>
+
                     </div>
 
     <!-----DIVIDER DIVS --------->
@@ -283,7 +298,11 @@
               <h3>about me</h3>
 
               <div class="half-width">
-                  <p>I'm a huge comic book nerd, and was originally inspired to learn to code from reading Batgirl comics.  I quickly fell in love with the process of building websites from the ground up, and used my time in quarantine to level up my coding skills.  I use HTML5, CSS, and JavaScript, and I'm currently learning how to build websites with Wordpress.</p>
+                  <p>I'm a huge comic book nerd, and was originally inspired to learn to code from reading Batgirl comics.  I quickly fell in love with the process of building websites from the ground up, and used my time in quarantine to level up my coding skills.</p>
+
+                  <br>
+
+                  <p>I use HTML5, CSS, and JavaScript, and I'm currently learning how to build websites with Wordpress.</p>
 
                   <br>
 
