Added tablet styling for work section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         <section id="work">
             <div class="full-width">
                 <h3>my projects</h3>
-                <p class="section-heading">Want a closer look?  Click on any of the project images to explore each site!</p>
 
                 <div class="project" id="unplugged-project">
                         <div class="half-width">
@@ -75,7 +74,7 @@
                           </figure>
                         </div>
                         <div class="half-width, description">
-                          <h4>Unplugged Project</h4>
+                          <h4><a href=" https://lesleywesley.github.io/unplugged-retreat-project/" target="_blank">Unplugged Project</a></h4>
                           <h5>Created using HTML5 & CSS</h5>
                           <p>A fully-responsive, multi-page site for a company specializing in teambuilding work retreats. Features a newsletter sign-up section and customer testimonials, as well as extra pages for Frequently Asked Questions and contact information.</p>
                         </div>
@@ -119,7 +118,7 @@
 
                     <div class="project">
                         <div class="half-width, description">
-                            <h4>Jubilee Austen Project</h4>
+                            <h4><a href=" https://lesleywesley.github.io/responsive-one-page-site/" target="_blank">Jubilee Austen Project</a></h4>
                             <h5>Created using HTML5 & CSS.</h5>
                             <p>A fully-responsive, one-page portfolio website.  Features Hero, Work, Contact, and About sections.  Elegant in its simplicity.</p>
                           </div>
@@ -177,7 +176,7 @@
                           </figure>
                         </div>
                         <div class="half-width, description">
-                            <h4>LolCat Clock Project</h4>
+                            <h4><a href=" https://lesleywesley.github.io/lolcat-clock/" target="_blank">LolCat Clock Project</a></h4>
                             <h5>Created using HTML5, CSS, & JavaScript</h5>
                             <p>A project combining my HTML, CSS and Javascript skills.  Features a working clock, and adorable pictures of kittens with different captions depending on what time it is.</p>
                         </div>
@@ -221,7 +220,7 @@
 
                     <div class="project" id="magic-8">
                         <div class="half-width, description">
-                            <h4>Magic 8 Ball Project</h4>
+                            <h4><a href="https://lesleywesley.github.io/magic-8-ball/" target="_blank">Magic 8 Ball Project</a></h4>
                             <h5>Created using HTML5, CSS, & JavaScript</h5>
                             <p>Another project featuring my HTML, CSS, and JavaScript skills.  This one boasts multiple animated features, including a shaking animation and answers that fade into view. Go ahead - Ask it a question, and see what it says!</p>
                         </div>
@@ -280,7 +279,7 @@
                           </figure>
                       </div>
                       <div class="half-width, description">
-                          <h4>Wordpress Blog</h4>
+                          <h4><a href="http://lesleywesley.co/" target="_blank">Wordpress Blog</a></h4>
                           <h5>Created using HTML5, CSS, & PHP</h5>
                           <p>A multi-page Wordpress site featuring a personalized homepage and blog page, as well as a variety of plug-ins and widgets.  This is mostly just a show piece, but who knows - maybe I'll write some blog posts if the mood strikes me...</p>
                       <div>
