Finished adding tablet and desktop styling

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
                   <br>
 
-                  <p>I use HTML5, CSS, and JavaScript, and I'm currently learning how to build websites with Wordpress.</p>
+                  <p>I use HTML5, CSS, and JavaScript, and I also love building custom themes in WordPress using PHP.</p>
 
                   <br>
 
